--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -945,6 +945,15 @@
         }
       }
     },
+    "{bitrate} - Show bitrate" : {
+
+    },
+    "{debugOverlay} - Show debug overlay (if enabled)" : {
+
+    },
+    "{time} - Show time as HH:MM:SS" : {
+
+    },
     "/" : {
       "localizations" : {
         "de" : {
@@ -71199,6 +71208,9 @@
         }
       }
     },
+    "Text" : {
+
+    },
     "Text to speech" : {
       "localizations" : {
         "de" : {
@@ -73930,6 +73942,7 @@
       }
     },
     "Time" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
