General text widget.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -945,7 +945,7 @@
         }
       }
     },
-    "{bitrate} - Show bitrate" : {
+    "{bitrateAndTotal} - Show bitrate and total number of bytes sent" : {
 
     },
     "{debugOverlay} - Show debug overlay (if enabled)" : {
