Only accept lower case letters as SRT(LA) server stream id.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -45078,6 +45078,9 @@
         }
       }
     },
+    "May only contain lower case letters." : {
+
+    },
     "Me in username color" : {
       "localizations" : {
         "de" : {
