Recording player started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -33260,6 +33260,12 @@
         }
       }
     },
+    "File" : {
+
+    },
+    "Files" : {
+
+    },
     "Filter" : {
       "localizations" : {
         "de" : {
@@ -53548,6 +53554,12 @@
           }
         }
       }
+    },
+    "Player" : {
+
+    },
+    "Players" : {
+
     },
     "Please enter your stream URL in stream settings before going live." : {
       "localizations" : {
