Rename camera to video source in scene settings.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -80487,6 +80487,9 @@
         }
       }
     },
+    "Video source" : {
+
+    },
     "Video stabilization" : {
       "localizations" : {
         "de" : {
