Hide media player seek for now.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -3871,6 +3871,9 @@
         }
       }
     },
+    "⚠️ Audio is not yet implemented." : {
+
+    },
     "⚠️ Deleting old settings ⚠️" : {
       "localizations" : {
         "de" : {
