Media player continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -78150,6 +78150,9 @@
         }
       }
     },
+    "Use a media player as video source in scenes to stream recordings or other MP4-files." : {
+
+    },
     "Use audio for timestamps" : {
       "localizations" : {
         "de" : {
