Show all settings toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -64739,6 +64739,9 @@
         }
       }
     },
+    "Show all settings" : {
+
+    },
     "Show name" : {
       "localizations" : {
         "de" : {
