Map widget started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -46759,6 +46759,9 @@
         }
       }
     },
+    "Map" : {
+
+    },
     "Max bandwidth follows input" : {
       "localizations" : {
         "de" : {
