Portrait UI option.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -57309,6 +57309,9 @@
         }
       }
     },
+    "Portrait UI" : {
+
+    },
     "POSITION" : {
       "localizations" : {
         "de" : {
